# ipc-lib

./: CMakeLists.txt
include/: includes.h  ipc_interface.h  shm_api.h  shm_api_struct.h
includes/: includes.h  ipc_interface.h  shm_api.h  shm_api_struct.h
sources/: ipc_get_fd.c  ipc_share_fd.c  shm_clear.c  shm_close.c  shm_create.c  shm_destroy.c  shm_get_data.c  shm_open_exist.c  shm_rewrite.c  shm_write.c
src/: ipc_get_fd.c  ipc_share_fd.c  shm_clear.c  shm_close.c  shm_create.c  shm_destroy.c  shm_get_data.c  shm_open_exist.c  shm_rewrite.c  shm_write.c
tests/test1/: CMakeLists.txt  main.c
tests/test2/: CMakeLists.txt  main.c  test2.c
